# phd-thesis

./: .cspell.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CITATION.cff  README.md  index.html  pyproject.toml
.cspell/: forbid-us-english.txt  names.txt  physics.txt  this-project.txt
.github/workflows/: ci.yml  lock.yml
docs/: .gitignore  _macros.qmd  _quarto-hardcover.yml  _quarto-paperback.yml  _quarto.yml  abstract.tex  acknowledgements.tex  before-body.tex  chapter1.qmd  chapter2.qmd  chapter3.qmd  chapter4.qmd  chapter5.qmd  chapter6.qmd  chapter7.qmd  chapter8.qmd  copyright.tex  ieee.csl  index.qmd  references.bib  references.qmd  styles.css
docs/filters/: eqref.lua  texorpdfstring.lua
docs/images/chapter1/: .gitignore  quark-model.tex
docs/images/chapter2/: cutkosky-cross-section-caption.qmd  cutkosky-p33-caption.qmd
docs/images/chapter7/: jpsi-to-pbar-sigma-k.tex  p-gamma-to-sigma-k.tex
docs/includes/: fig-jpsi-dpd-1d.qmd  fig-lambda-c-intensity-projections.qmd  fig-lc2pkpi-ls-difference.qmd  fig-lhcb-detector.qmd  fig-pc-pv-currents.qmd
docs/preamble/: configuration.tex  epub-mathjax.html  toc.tex
